--- a/RestuarantProjectMVC/RestuarantProjectMVC/Views/Home/Index.cshtml
+++ b/RestuarantProjectMVC/RestuarantProjectMVC/Views/Home/Index.cshtml
@@ -1,9 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_AddLayout.cshtml";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Get a restaurant</h1>
+    <p>Enter a Zip Code to get a restaurant.</p>
+</div>
+
+
+<div style="width: 20%; margin: 0 auto" class="text-center">
+    <div class="form-row align-items-center">
+        @using (Html.BeginForm("Index", "RestaurantMVC", FormMethod.Get))
+         {
+            <div class="form-group text-center">
+                <input type="text" name="ZipCode" placeholder="zip code" class="form-control text-center opacity-75" maxlength="5"/>
+                <input type="hidden" name="Page" value="0" />
+            </div>
+            <br />
+
+            <input type="submit" value="Enter" class="btn btn-primary" />
+         }
+    </div>
 </div>
 
